# matrixpy

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature--good-first.md
.github/workflows/: CODEOWNERS  codeql.yml  docs.yml  publish.yml  scorecard.yml  tests.yml
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/examples/: checks.md  cooldown.md  error-handling.md  extension.md  index.md  ping.md  reaction.md  scheduler.md
docs/docs/guides/: bigger-bot.md  checks.md  commands.md  configuration.md  error-handling.md  events.md  groups.md  index.md  introduction.md
docs/docs/reference/: bot.md  checks.md  command.md  config.md  content.md  context.md  errors.md  extension.md  group.md  message.md  protocols.md  registry.md  room.md  scheduler.md  space.md  types.md
docs/docs/stylesheets/: extra.css
examples/: README.md  checks.py  client_info.py  config.yaml  cooldown.py  cooldown_error.py  error.py  error_handling.py  extension.py  member.py  ping.py  reaction.py  scheduler.py  table.py
matrix/: __init__.py  _error_handler.py  api.py  bot.py  checks.py  command.py  component.py  config.py  content.py  context.py  errors.py  extension.py  group.py  help.py  member.py  message.py  protocols.py  registry.py  room.py  scheduler.py  space.py  types.py
matrix/help/: __init__.py  help_command.py  pagination.py
tests/: config_fixture.yaml  config_fixture_token.yaml  config_mixture.yaml  test_api.py  test_bot.py  test_checks.py  test_command.py  test_config.py  test_context.py  test_error_handler.py  test_extension.py  test_group.py  test_help.py  test_member.py  test_message.py  test_registry.py  test_room.py  test_scheduler.py  test_space.py
tests/config/: config_file.yaml  test_config.py
tests/config/sample_config_files/: config_file_error.yaml  config_file_succes.yaml
tests/help/: test_default_help_command.py  test_help_command.py  test_pagination.py
