[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]

[project]
name = "matrix-python"
dynamic = ["version"]
authors = [
    { name = "Simon Roy" },
    { name = " Chris Dedman Rollet " }
]
maintainers = [
    { name = "Code Society Lab", email = "admin@codesociety.xyz" }
]
description = "An easy-to-use Matrix bot framework designed for quick development and minimal setup"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

dependencies = [
    "matrix-nio==0.25.2",
    "logger",
    "PyYAML==6.0.3",
    "markdown==3.10.2",
    "APScheduler==3.11.2",
    "envyaml==1.10.211231",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "black==26.3.1",
    "mypy==1.20.2",
    "types-PyYAML==6.0.12.20260408",
    "types-Markdown==3.10.2.20260408",
]
doc = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.7.6",
    "mkdocstrings[python]==1.0.4"
]

[project.urls]
"Homepage" = "https://codesociety.xyz"
"Source" = "https://github.com/Code-Society-Lab/matrixpy"
"Issues" = "https://github.com/Code-Society-Lab/matrixpy/issues"

[tool.setuptools]
packages = ["matrix"]
license-files = []

[tool.setuptools.package-data]
matrix = ["py.typed"]

[tool.setuptools_scm]
write_to = "matrix/_version.py"

[tool.coverage.run]
omit = [
    "matrix/_version.py",
    "matrix/__init__.py",
]