[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]

[project]
name = "matrix-python"
dynamic = ["version"]
authors = [
    { name = "Simon Roy" },
    { name = " Chris Dedman Rollet " }
]
maintainers = [
    { name = "Code Society Lab", email = "admin@codesociety.xyz" }
]
description = "An easy-to-use Matrix bot framework designed for quick development and minimal setup"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

dependencies = [
    "matrix-nio==0.25.2",
    "logger",
    "PyYAML==6.0.3",
    "markdown==3.10.2",
    "APScheduler==3.11.3",
    "envyaml==1.10.211231",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "pytest-asyncio==1.4.0",
    "black==26.5.1",
    "mypy==2.1.0",
    "pre-commit==4.6.0",
    "types-PyYAML==6.0.12.20260518",
    "types-Markdown==3.10.2.20260518",
]
doc = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.7.6",
    "mkdocstrings[python]==1.0.4"
]

[project.urls]
"Homepage" = "https://codesociety.xyz"
"Source" = "https://github.com/Code-Society-Lab/matrixpy"
"Issues" = "https://github.com/Code-Society-Lab/matrixpy/issues"

[tool.setuptools]
packages = ["matrix"]
license-files = []

[tool.setuptools.package-data]
matrix = ["py.typed"]

[tool.setuptools_scm]
write_to = "matrix/_version.py"

[tool.coverage.run]
omit = [
    "matrix/_version.py",
    "matrix/__init__.py",
]
